{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 19,
  "lineage": "36890b15-75ef-168e-4510-34a4ca1d80aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-0b80e00c9c4856fee",
            "id": "igw-0b80e00c9c4856fee",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-igw",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-igw",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0b034dae19884c14e",
            "id": "rtb-0b034dae19884c14e",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ymontagnier-tp04-ex01-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-066937f100f823743",
            "id": "rtb-066937f100f823743",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ymontagnier-tp04-ex01-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0dce8e6f418a38fa7",
            "id": "rtb-0dce8e6f418a38fa7",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ymontagnier-tp04-ex01-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-05f6a937d81c3c733",
            "id": "rtb-05f6a937d81c3c733",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b80e00c9c4856fee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp04-ex01-public-rtb",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-public-rtb",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01631eaf207d34b00",
            "route_table_id": "rtb-0b034dae19884c14e",
            "subnet_id": "subnet-0e8f9233613bb21f9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce0b3f47677a34ba",
            "route_table_id": "rtb-066937f100f823743",
            "subnet_id": "subnet-0c1c17cc056464fef"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0175e2909e919d852",
            "route_table_id": "rtb-0dce8e6f418a38fa7",
            "subnet_id": "subnet-0c15541ada38a7413"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0757f54c42d1a1d49",
            "route_table_id": "rtb-05f6a937d81c3c733",
            "subnet_id": "subnet-0be28b37966c63fe9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a1855d8dfdac591",
            "route_table_id": "rtb-05f6a937d81c3c733",
            "subnet_id": "subnet-09a7402758e64612c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8df0e913ccf7edd",
            "route_table_id": "rtb-05f6a937d81c3c733",
            "subnet_id": "subnet-09b7b7bc2cf7d5f1c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0e8f9233613bb21f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f9233613bb21f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0c1c17cc056464fef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c17cc056464fef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0c15541ada38a7413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c15541ada38a7413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0be28b37966c63fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be28b37966c63fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-09a7402758e64612c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a7402758e64612c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-09b7b7bc2cf7d5f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b7b7bc2cf7d5f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0a37d699f4435e5d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-0a37d699f4435e5d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090eaafcb05d89961",
            "default_route_table_id": "rtb-02b715bd1db84d336",
            "default_security_group_id": "sg-0321e838ff63ad22f",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a37d699f4435e5d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b715bd1db84d336",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp04-ex01-vpc",
              "Owner": "ymontagnier"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex01-vpc",
              "Owner": "ymontagnier"
            }
          }
        }
      ]
    }
  ]
}